Requester now supports up to 9 items/fluids, closes #14

--- a/src/main/resources/assets/rsrequestify/lang/en_us.json
+++ b/src/main/resources/assets/rsrequestify/lang/en_us.json
@@ -4,5 +4,6 @@
   "button.refinedstoragerequestify:requester.save": "Save",
   "tooltip.refinedstoragerequestify:requester.missing": "Missing ingredients",
   "block.rsrequestify.crafting_emitter": "Crafting Emitter",
-  "block.rsrequestify.crafting_emitter.tooltip": "Emits a Redstone Signal when any item/fluid in the filter is being crafted."
+  "block.rsrequestify.crafting_emitter.tooltip": "Emits a Redstone Signal when any item/fluid in the filter is being crafted.",
+  "block.rsrequestify.requester.tooltip": "Keeps the filtered item/fluid in stock with the desired amount."
 }
